# py2bit

./: MANIFEST.in  README.md  azure-pipelines.yml  py2bit.c  py2bit.h  pyproject.toml  setup.py
.github/workflows/: pypi.yml
lib2bit/: 2bit.c  2bit.h
py2bitTest/: test.py
